force-app/main/default/objects/OM_BotProductURL__mdt/OM_BotProductURL__mdt.object-meta.xml
<CustomObject>
    <description>Urls y productos a mostrar en el bot Chat/Whatsapp (OM_ArriagaBot)</description>
    <label>Bot URL Product</label>
    <pluralLabel>Bot URL Products</pluralLabel>
</CustomObject>