force-app/main/default/objects/OM_BotProductURL__mdt/fields/OM_Categorizacion_documentacion__c.field-meta.xml
<CustomField>
    <fullName>OM_Categorizacion_documentacion__c</fullName>
    <label>Categorizacion documentacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>