force-app/main/default/objects/OM_BotProductURL__mdt/fields/OM_Documentacion__c.field-meta.xml
<CustomField>
    <fullName>OM_Documentacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registro para mostrar en el menu documentación con su URL correspondiente</description>
    <label>Documentación</label>
    <type>Checkbox</type>
</CustomField>