force-app/main/default/objects/OM_BotProductURL__mdt/fields/OM_General__c.field-meta.xml
<CustomField>
    <fullName>OM_General__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registros que pertenecen a la información General</description>
    <label>Informacion General</label>
    <type>Checkbox</type>
</CustomField>