force-app/main/default/objects/OM_BotProductURL__mdt/fields/OM_Hipotecas__c.field-meta.xml
<CustomField>
    <fullName>OM_Hipotecas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registro que pertenece a hipoteca y su URL correspondiente</description>
    <label>Hipotecas</label>
    <type>Checkbox</type>
</CustomField>