force-app/main/default/objects/OM_BotProductURL__mdt/fields/OM_InformacionDocumentacionURL__c.field-meta.xml
<CustomField>
    <fullName>OM_InformacionDocumentacionURL__c</fullName>
    <description>Url a la información de documentacion del producto o tipo de producto.</description>
    <label>Informacion Documentacion URL</label>
    <type>Url</type>
</CustomField>