force-app/main/default/objects/OM_BotProductURL__mdt/fields/OM_InformacionGeneralURL__c.field-meta.xml
<CustomField>
    <fullName>OM_InformacionGeneralURL__c</fullName>
    <description>Contiene la URL del producto o tipo de producto</description>
    <label>Información General URL</label>
    <type>Url</type>
</CustomField>