force-app/main/default/objects/OM_BotProductURL__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>OM_Categorizacion_informacion__c</columns>
    <columns>OM_Categorizacion_documentacion__c</columns>
    <columns>DeveloperName</columns>
    <columns>OM_InformacionGeneralURL__c</columns>
    <columns>OM_InformacionDocumentacionURL__c</columns>
    <columns>OM_General__c</columns>
    <columns>OM_Hipotecas__c</columns>
    <columns>OM_Documentacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>